<resources>
    <string name="app_name">Notes</string>
    <string name="label_day_of_week">День недели:</string>
    <string name="hint_title">Название заметки</string>
    <string name="hint_description">Описание заметки</string>
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>
    <string name="button_save_note">Добавить заметку</string>
    <string name="choose_day_week">Выберите день недели:</string>
    <string name="choose_priority">Определите приоритет:</string>
    <string name="warning_fill_fields">Заполните все поля!</string>

    <string-array name="days_of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
</resources>